# tsg-metadata

./: .gitignore  Cargo.toml  README.md  issues.md
derived/: digests.csv  urls-http.txt
logs/: curl-url-logs.txt
sources/xml/: archivetam-twitter-stream-2014-01-mysqldump_files.xml  archiveteam-json-twitterstream-2012_files.xml  archiveteam-json-twitterstream_files.xml  archiveteam-twitter-json-2011_files.xml  archiveteam-twitter-stream-2012-01_files.xml  archiveteam-twitter-stream-2012-02_files.xml  archiveteam-twitter-stream-2012-03_files.xml  archiveteam-twitter-stream-2012-04_files.xml  archiveteam-twitter-stream-2012-05_files.xml  archiveteam-twitter-stream-2012-06_files.xml  archiveteam-twitter-stream-2012-07_files.xml  archiveteam-twitter-stream-2012-08_files.xml  archiveteam-twitter-stream-2012-09_files.xml  archiveteam-twitter-stream-2012-10_files.xml  archiveteam-twitter-stream-2012-11_files.xml  archiveteam-twitter-stream-2012-12_files.xml  archiveteam-twitter-stream-2013-01_files.xml  archiveteam-twitter-stream-2013-02_files.xml  archiveteam-twitter-stream-2013-03_files.xml  archiveteam-twitter-stream-2013-04_files.xml  archiveteam-twitter-stream-2013-05_files.xml  archiveteam-twitter-stream-2013-06_files.xml  archiveteam-twitter-stream-2013-07_files.xml  archiveteam-twitter-stream-2013-08_files.xml  archiveteam-twitter-stream-2013-09_files.xml  archiveteam-twitter-stream-2013-10_files.xml  archiveteam-twitter-stream-2013-11_files.xml  archiveteam-twitter-stream-2013-12_files.xml  archiveteam-twitter-stream-2014-01_files.xml  (+101 more)
src/: archive.rs  cli.rs  extract.rs  lib.rs  name.rs  source.rs  sources.rs
src/archive/: mod.rs  tar.rs  (+1 more)
