[package]
name = "tsg-metadata"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/tsg-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.5"
clap = { version = "4", features = ["derive"] }
cli-helpers = "0.1"
flate2 = "1"
hex = "0.4"
log = "0.4"
memmap = "0.7"
piz = "0.5"
roxmltree = "0.20"
simplelog = "0.12"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
